<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 Jeff Sharkey, http://jsharkey.org/

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fillViewport="true">

    <ScrollView
		android:layout_width="fill_parent"
		android:layout_height="0px"
		android:layout_weight="1">
    
	    <!-- Main content -->
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0px"
	        android:orientation="vertical"
	        android:layout_weight="1">
	
			<!-- Manual settings -->
			<LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
		        
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/settings_title"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		        
		
		        
		    
		        
		
		        
	
			</LinearLayout> <!-- end of Manual settings -->
	
			<View android:layout_width="fill_parent" android:layout_height="5dip" />
	
        <!-- auto-scoll -->
            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
             <TextView
                      android:layout_width="wrap_content" 
                      android:layout_height="wrap_content"
                      android:text="Auto-scroll is temporarily disabled, until the battery issue is solved "
                      android:textAppearance="?android:attr/textAppearanceSmall" />
                      
              <!--         
            <TextView android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />    
                
            <TextView
                      android:layout_width="wrap_content" 
                      android:layout_height="wrap_content"
                      android:text=" seconds (0 to disabled)"
                      android:textAppearance="?android:attr/textAppearanceSmall" />  
                      -->       
           </LinearLayout> 
          <!-- end of auto-scoll  
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dip">
        
            <SeekBar android:id="@+id/seek"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="20"
                android:enabled="false"/>
  
        </LinearLayout>
         -->


            <View android:layout_width="fill_parent" android:layout_height="5dip" />
  
			<!-- Update time -->
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
	
				<TextView
		            android:layout_width="wrap_content" 
		            android:layout_height="wrap_content"
		            android:text="@string/conf_update_time"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
			
				<View android:layout_width="5px" android:layout_height="wrap_content" />
		            
		        <EditText
		            android:id="@+id/conf_update_time"
		            android:layout_width="60px" 
		            android:layout_height="wrap_content"
		            android:singleLine="true"
		            android:freezesText="true"
		            android:numeric="integer"
		            android:maxLength="2"
		            android:editable="false"
		            android:cursorVisible="false"
		            android:text="@string/conf_default_update_time" />

				<View android:layout_width="5px" android:layout_height="wrap_content" />
		
				<TextView
		            android:layout_width="wrap_content" 
		            android:layout_height="wrap_content"
		            android:text="@string/conf_update_time_units"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
	            	        
	        </LinearLayout> <!-- end of Update time -->

			<SeekBar android:id="@+id/seek_conf_update_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="24"
                />
	
	        <View android:layout_width="fill_parent" android:layout_height="5dip" />
	
  
          <!-- num items -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
      
                <TextView
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content"
                        android:text="@string/conf_num_items_saved"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
              
                <View android:layout_width="5px" android:layout_height="wrap_content" />
                        
                    <EditText
                        android:id="@+id/conf_num_items_saved"
                        android:layout_width="60px" 
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:freezesText="true"
                        android:numeric="integer"
                        android:maxLength="3"
                        android:editable="false"
                        android:cursorVisible="false"
                        android:text="@string/conf_default_num_items_saved" />
        
                <View android:layout_width="5px" android:layout_height="wrap_content" />
       
                            
              </LinearLayout> <!-- end of num items -->
    
          <SeekBar android:id="@+id/seek_conf_num_items_saved"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:max="120"
                    />
      
              <View android:layout_width="fill_parent" android:layout_height="5dip" />  
  
			<!-- Automatic settings -->
			<LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
		
		        
		            
		        
		            
		        
			
			</LinearLayout> <!--  end of Automatic settings -->
	    </LinearLayout> <!-- end of Main content -->
    </ScrollView>

	<!-- Save button -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        style="@android:style/ButtonBar">

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:visibility="invisible" />

        <Button
            android:id="@+id/conf_save"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/conf_save"
            android:textAppearance="?android:attr/textAppearanceButton" />

    </LinearLayout> <!-- end of Save button -->

</LinearLayout>
