<?xml version="1.0" encoding="utf-8"?>

<!-- 
  Copyright (c) 2009 Omar Pera Mira, Pablo Pera Mira
 
  You can find a copy of the MIT License along with this source file.
  Otherwise see <http://www.opensource.org/licenses/mit-license.php>  
-->

<LinearLayout
  android:id="@+id/mainPanelLayout"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@android:color/background_light">

  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="4dip"
    android:layout_marginBottom="0dip"
    android:layout_marginRight="1dip"
    android:layout_marginLeft="4dip">

    <TextView
      android:id="@+id/title_item_mode"
      style="@style/TitleItemMode" />

  </LinearLayout>
  
  <TextView
    android:id="@+id/pubdate_item_mode"
    style="@style/TimestampItemMode"
    android:gravity="right"
    android:layout_marginRight="6dip"/>

  <ImageView
    android:src="@drawable/separator_item_mode"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scaleType="fitXY"
  />
  
  <!-- Contains the WebView. We need this separate layout for it, -->
  <!-- otherwise it won't let the buttons appear in a long web page -->
  <LinearLayout
    android:id="@+id/webviewParent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1">

    <!-- WebView that shows the actual web page -->
    <WebView
      android:id="@+id/webview"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="0" />

    <!-- Empty text view that makes the webview appear always at the ... -->
    <!-- ... upper part of the screen, requires such an ugly trick here -->
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1"
      android:height="10000sp"
      android:background="#ffffff"
      android:text="" />
  </LinearLayout>
  
  
    <LinearLayout 
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

			<com.mobclix.android.sdk.MobclixMMABannerXLAdView
				android:id="@+id/banner_adview"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
                    
    </LinearLayout>


  <!-- Panel for the previous/next buttons -->
  <LinearLayout
    android:id="@+id/footer"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:layout_alignParentBottom="true"
    android:background="#FFFFFF"
    >

    <Button
      android:id="@+id/button_previous"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_weight="1"
      android:text="@string/btn_previous" />
      
    <Button
      android:id="@+id/button_go_to_url"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_weight="1"
      android:text="@string/menu_go_to_url" />

    <Button
      android:id="@+id/button_next"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_weight="1"
      android:text="@string/btn_next" />
  </LinearLayout>

</LinearLayout>
